REST and model methods

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,7 +10,7 @@ td {
   padding: 15px;
 }
 table {
-  background-image: url("https://s2.graphiq.com/sites/default/files/stories/t4/The_23_Cutest_Dog_Breeds_Youve_Never_Even_Heard_Of_3223_5026.jpg");
+  background-image: url(footer_lodyas.png);
   color: purple;
   font-weight: bold;
 }
