Added middle name and bio to db

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,7 @@
 
 <tr>
 <th>First</th>
+<th>Middle</th>
 <th>Last</th>
 <th>Full Name</th>
 <th>Email</th>
@@ -12,6 +13,7 @@
 <% @contacts.each do |contact| %>
 <tr>
 <td><%= contact.first_name %></td>
+<td><%= contact.middle_name %></td>
 <td><%= contact.last_name %></td>
 <td><%= contact.full_name %></td>
 <td><%= contact.email %></td>
